--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.6
   google_fonts: ^4.0.3
   http: ^1.2.2
+  get: ^4.6.5
 
 dev_dependencies:
   flutter_test:
